--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "babel-plugin-react-transform": "^3.0.0",
     "bootstrap": "^4.2.1",
     "mdbreact": "^4.9.0",
+    "numeral": "^2.0.6",
     "react": "16.7.0-alpha.0",
     "react-bootstrap": "^0.32.4",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "16.7.0-alpha.0",
+    "react-numeral": "^1.0.1",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "2.1.3"
