--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "16.7.0-alpha.0",
     "react-bootstrap": "^0.32.4",
     "react-chartjs-2": "^2.7.4",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "16.7.0-alpha.0",
     "react-helmet": "^5.2.0",
     "react-moment": "^0.8.4",
@@ -28,7 +30,8 @@
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "2.1.3",
-    "react-scroll-box": "^0.3.5"
+    "react-scroll-box": "^0.3.5",
+    "unstated": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
