--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-helmet": "^5.2.0",
     "react-moment": "^0.8.4",
     "react-numeral": "^1.0.1",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "2.1.3",
     "react-scroll-box": "^0.3.5",
+    "redux": "^4.0.1",
     "unstated": "^2.1.1"
   },
   "scripts": {
