--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "react-moment": "^0.8.4",
     "react-numeral": "^1.0.1",
     "react-redux": "^6.0.0",
+    "react-responsive-spritesheet": "^2.3.9",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "2.1.3",
     "react-scroll-box": "^0.3.5",
+    "react-spritesheet": "^1.0.1",
     "redux": "^4.0.1",
+    "shallowequal": "^1.1.0",
     "unstated": "^2.1.1"
   },
   "scripts": {
