--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-transform": "^3.0.0",
     "bootstrap": "^4.2.1",
+    "lodash": "^4.17.11",
     "mdbreact": "^4.9.0",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
